--- a/spatial/note/Caples_Sat_Veg_Lidar_Comp.Rmd
+++ b/spatial/note/Caples_Sat_Veg_Lidar_Comp.Rmd
@@ -7,7 +7,7 @@ output: html_notebook
 
 # Overview of information from satellite, on-the-ground, and Lidar data from the Caples Creek Watershed
 
-```{r setup, include=FALSE}
+```{r setup, echo=FALSE}
 knitr::opts_chunk$set(out.extra = '', eval = TRUE, echo = TRUE)
 opts <- options(knitr.kable.NA="")
 
@@ -240,7 +240,62 @@ wide4havars %>%
 
 
 ```
-#### Pixel by pixel after - before comparisons
+# Large tree analysis discussion: full-model (height, year, plot, slope, intercept)
+
+Using the pixel-level data set for each point Canopy Height to large tree analysis.  For each plot, we show Tree Height 2018 (x) vs 2020 (y), sorted by RAVG, colored by RAVG class, with a separate plot level regression line (slope and intercept) and the LARGE TREE cutoffs shown, to discuss the value of utilizing 'correction factors' for large trees for 2018 vs 2020.
+
+```{r}
+#depends on running build_pixel_level_data.R
+# source(here("spatial","src", "build_pixel_level_data.R"))
+# GGPLOT of Canopy Height analysis
+# each plot, sorted by RAVG, colored by RAVG class, 2018 (x) vs 2020 (y)
+# Separate slope and intercept
+# for model dsicussion
+pixel_level_db_ch_cc %>% 
+    filter(avian_point != 0) %>%
+    # filter(avian_point %in% c(841, 454, 490,576, 1057, 1072)) %>%
+    ggplot(aes(x = canopy_height_18, y = canopy_height_20)) +
+    # geom_point(pch = ".") +
+    # stat_summary(fun.data=mean_cl_normal) + 
+    geom_point(aes(size = coverage_fraction, col=RAVG_category), 
+               alpha = 0.42, 
+               position = jitter, 
+               shape = 1, 
+               # fill = "tan", 
+               stroke = .5) +
+    scale_color_manual(values=pt_colors) +
+    scale_size(range = c(0,1)) +
+      geom_smooth(method="lm",
+                formula= y~x,
+                mapping = aes(weight = coverage_fraction),
+                color = "purple",
+                lwd = 0.5,
+                show.legend = FALSE) +
+    geom_abline(intercept = 0, slope = 1, lty = 2, col = "blue") +
+    geom_vline(xintercept = 22, lty = 3, col = "black") +
+    geom_hline(yintercept = 22, lty = 3, col = "black") +
+    coord_fixed(ratio = 1, xlim = c(0,40), ylim = c(0,40)) +
+      # xlim(0, 40) +
+      # ylim(0, 40) +
+    # theme(aspect.ratio=1) +
+    theme(legend.position="none") +
+    facet_wrap(~avian_point) + 
+    # geom_vline(aes(xintercept = mean, group = avian_point), colour = 'red') +
+    #theme(strip.text = element_text(size = rel(3.0), vjust = -4.0), 
+    #     panel.spacing.y = unit(-2, "lines")) # +
+     theme(strip.text = element_blank(), 
+         panel.spacing.y = unit(0.1, "lines"),
+         panel.spacing.x = unit(0.1, "lines")) +
+         theme(axis.text.x=element_text(size=7, angle = 90)) +
+  # theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+         theme(axis.text.y=element_text(size=7)) +
+  theme(axis.line = element_line(color='black'),
+        # plot.background = element_blank(),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.border = element_blank())
+```
+# Canopy Height Pixel by pixel after - before comparisons - base-R
 
 ```{r}
 # Pixel by pixel comparisons around particular points 2018 vs 2020
@@ -348,10 +403,12 @@ text(x = max(test_ch18[[rowidno]][,1])*.2, y = max(test_ch20[[rowidno]][,1])*.9,
 }
 
 ```
+# Canopy Cover Pixel by pixel after - before comparisons - base-R
 
-```{r}
-for(i in naturalsort::naturalsort(wldf_100$avian_point[wldf_100$avian_point != 0])){
-
+```{r }
+for(i in avian_points_sorted){
+avian_point_number <- i
+rowidno <- as.numeric(dimnames(wldf_100)[[1]][wldf_100$avian_point==avian_point_number])
 par(mfrow=c(1,1))
 par(pty="s")
 par(mar=c(4,4,3,2))
@@ -362,5 +419,60 @@ abline(lm(test_cc20[[rowidno]][,1]~test_cc18[[rowidno]][,1]), col="red")
 title(main=paste0("Pixel by pixel comparison \n for point ", avian_point_number))  #, " 2018 vs 2020"
 
 }
+```
+# Large tree analysis discussion: full-model (height, year, plot, slope, intercept)
+
+Using the pixel-level data set for each point Canopy Height to large tree analysis.  For each plot, we show Tree Height 2018 (x) vs 2020 (y), sorted by RAVG, colored by RAVG class, with a separate plot level regression line (slope and intercept) and the LARGE TREE cutoffs shown, to discuss the value of utilizing 'correction factors' for large trees for 2018 vs 2020.
+
+```{r}
+#depends on running build_pixel_level_data.R
+# source(here("spatial","src", "build_pixel_level_data.R"))
+# GGPLOT of Canopy Height analysis
+# each plot, sorted by RAVG, colored by RAVG class, 2018 (x) vs 2020 (y)
+# Separate slope and intercept
+# for model dsicussion
+pixel_level_db_ch_cc %>% 
+    filter(avian_point != 0) %>%
+    # filter(avian_point %in% c(841, 454, 490,576, 1057, 1072)) %>%
+    ggplot(aes(x = canopy_height_18, y = canopy_height_20)) +
+    # geom_point(pch = ".") +
+    # stat_summary(fun.data=mean_cl_normal) + 
+    geom_point(aes(size = coverage_fraction, col=RAVG_category), 
+               alpha = 0.42, 
+               position = jitter, 
+               shape = 1, 
+               # fill = "tan", 
+               stroke = .5) +
+    scale_color_manual(values=pt_colors) +
+    scale_size(range = c(0,1)) +
+      geom_smooth(method="lm",
+                formula= y~x,
+                mapping = aes(weight = coverage_fraction),
+                color = "purple",
+                lwd = 0.5,
+                show.legend = FALSE) +
+    geom_abline(intercept = 0, slope = 1, lty = 2, col = "blue") +
+    geom_vline(xintercept = 22, lty = 3, col = "black") +
+    geom_hline(yintercept = 22, lty = 3, col = "black") +
+    coord_fixed(ratio = 1, xlim = c(0,40), ylim = c(0,40)) +
+      # xlim(0, 40) +
+      # ylim(0, 40) +
+    # theme(aspect.ratio=1) +
+    theme(legend.position="none") +
+    facet_wrap(~avian_point) + 
+    # geom_vline(aes(xintercept = mean, group = avian_point), colour = 'red') +
+    #theme(strip.text = element_text(size = rel(3.0), vjust = -4.0), 
+    #     panel.spacing.y = unit(-2, "lines")) # +
+     theme(strip.text = element_blank(), 
+         panel.spacing.y = unit(0.1, "lines"),
+         panel.spacing.x = unit(0.1, "lines")) +
+         theme(axis.text.x=element_text(size=7, angle = 90)) +
+  # theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+         theme(axis.text.y=element_text(size=7)) +
+  theme(axis.line = element_line(color='black'),
+        # plot.background = element_blank(),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.border = element_blank())
 ```
 
